fix: set z-index as 1 for dropdown menu to avoid overlapping with others

--- a/assets/search/scss/_dropdown.scss
+++ b/assets/search/scss/_dropdown.scss
@@ -29,6 +29,7 @@
     max-height: 30vh;
     overflow: hidden auto;
     padding: 0.5rem 0 0.15rem;
+    z-index: 1;
 }
 
 .search-dropdown-item {
